Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,7 @@ stages:
     - task: DotNetCoreCLI@2
       displayName: Build
       inputs:
+        majorVersion: 6.0.x
         command: 'build'
         projects: |
           $(workingDirectory)/*.csproj
