--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
     - task: DotNetCoreCLI@2
       displayName: Build
       inputs:
-        majorVersion: 6.0.x
+        majorVersion: '6.0.x'
         command: 'build'
         projects: |
           $(workingDirectory)/*.csproj
