--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,11 @@ stages:
       vmImage: $(vmImageName)
 
     steps:
+    - task: UseDotNet@2
+      inputs:
+        version: '6.0.x'
+        includePreviewVersions: true
+
     - task: DotNetCoreCLI@2
       displayName: Build
       inputs:
