--- a/src/FuncAzureTypingHard.csproj
+++ b/src/FuncAzureTypingHard.csproj
@@ -7,7 +7,7 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="1.5.0" />
 		<PackageReference Include="Azure.ResourceManager" Version="1.0.0-beta.6" />
-		<PackageReference Include="AzureDevOpsTracker" Version="1.1.4-alpha" />
+		<PackageReference Include="AzureDevOpsTracker" Version="3.0.0-rc" />
 		<PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
 		<PackageReference Include="Microsoft.Azure.Management.ResourceManager" Version="3.13.1-preview" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.21" />
